# personal-financial-control

./: .env.example  README.md  docker-compose.yml
backend/: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
backend/src/: main.py
backend/src/components/account/: repositories.py  routers.py  schemes.py  services.py
backend/src/components/auth/: routers.py  schema.py  service.py
backend/src/components/budget/: repositories.py  routers.py  schemes.py  services.py
backend/src/components/dashboard/: repositories.py  routers.py  schemes.py  services.py
backend/src/components/transaction/: repositories.py  routers.py  schemes.py  services.py
backend/src/components/transaction_category/: repositories.py  routers.py  schemes.py  services.py
backend/src/components/user/: repositories.py  routers.py  schemes.py  services.py
backend/src/database/: connection.py  create_tables.py
backend/src/shared/: depends.py  exceptions.py  exceptions_hendler.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: app.tsx  global.css  routes.tsx
frontend/src/components/: DateMonthPicker.tsx  Navbar.tsx  TablePagination.tsx  alert-delete.tsx  cash-flow-chart.tsx  date-picker-with-range.tsx  header-children-page.tsx  header-root-page.tsx  month-picker-input.tsx
frontend/src/hooks/: useFilter.ts
frontend/src/services/: api.ts  methods.ts
test-cypress/: cypress.config.js  package-lock.json  package.json
test-cypress/feature/: account.feature  budget.feature  categorie.feature  login.feature  transaction.feature
(+62 files in other folders)
