[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Bernardo Tavares Mota <bernardotmota@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
asyncpg = "^0.29.0"
pyjwt = "^2.8.0"
passlib = "^1.7.4"
python-multipart = "^0.0.9"
requests = "^2.31.0"
gunicorn = "^23.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
